<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        android:id="@+id/layout_init"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/l1_title"
            android:textAlignment="center"
            android:textSize="32sp" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="90dp" />

        <EditText
            android:id="@+id/getPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Player Name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:elevation="0dp"
            android:text="@string/btn_start"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondary"
        android:elevation="15dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/textGameL1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/l2_title"
            android:textAlignment="center"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textGameL1"
            android:layout_below="@+id/textGameL1"
            android:text="@string/ps1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:text="@string/ps2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/guess_remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textGameL1"
            android:layout_below="@+id/textGameL1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/guess_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textGameL1"
            android:layout_below="@+id/textView3"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/plGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:ems="10"
            android:hint="Guess Number"
            android:inputType="number"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plGuess"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:backgroundTint="@color/colorSecondaryDark"
            android:text="@string/btn_guess"
            android:textColor="@color/colorSecondaryText" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_guess"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="93dp"
            android:backgroundTint="@color/colorSecondaryDark"
            android:text="@string/btn_reset"
            android:textColor="@color/colorSecondaryText" />

        <Button
            android:id="@+id/btn_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_reset"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:backgroundTint="@color/colorSecondaryDark"
            android:text="@string/btn_restart"
            android:textColor="@color/colorSecondaryText" />
    </RelativeLayout>

</LinearLayout>
